Current:
  * The option to use a Minus instead of a Hyphen.
  * Table of Contents: Folded items are now grayed out.
  * Table of Contents: A right-click menu.
  * An indicator that shows when maxima and wxMaxima exchange data.
  * Autocompletion now collects words from the current code cell, too.
  * Better indentation of if clauses and of loops.
  * Automatic line wrap now can be done at spaces in code cells, too.
  * If the number is too long to display it now is still possible to copy it.
  * Documented that box() highlights text in maxima's output.
  * the with_slider type of commands now uses wxstatusbar() in order to provide
  * progress information for the user.
  * Several scrolling fixes, again.
  * Many additional bug fixes and stability enhancements.
  * Invalid XML tags are now handled more gracefully
  * wxMaxima can now directly open a content.xml that has been extracted from a
    broken .wxmx file (e.G. using a text editor) and that has been saved as
    "content.xml" (UTF8-encoding without BOM).

16.12:
  * Not a change in wxMaxima, but useful: In maxima >5.38 the load() command can
    load .wxm files like it would load .mac files.
  * Better detection and diagnosis for maxima process that terminate unexpectedly
    even if the OS fails to notify us that the network connection with
    maxima has dropped.
  * Incremental search
  * Automatic line wrap
  * Bullet lists now use real bullets.
  * Markdown: Block quote support
  * A button that temporarily hides all code cells
  * Massive speedups in the drawing code.
  * Added a wxstatusbar() command that allows a long-ranging block() to send a string
    about its progress to the status bar.
  * Support for cells that are >5000 pixels wide
  * Better High-DPI support
  * A Kabyle Translation for users of wxWidgets >= 3.0.1
  * Holding the "evaluate" key now evaluates all cells of the document one-by-one
  * .wxm files now include image cells
  * Drag-and-drop now handles image cells