@@ -1,4 +1,5 @@
 Current:
+  * A config item that allows to disable printing of Cell brackets
   * The option to use a Minus instead of a Hyphen.
   * Table of Contents: Folded items are now grayed out.
   * Table of Contents: A right-click menu.
